--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
   "manifest_version": 2,
 
   "name": "ClipHistory",
-  "description": "당신의 소중한 복사 히스토리 보관해드립니다.\nSave your copy list, just for you",
-  "version": "1.0.0",
+  "description": "당신의 소중한 복사 히스토리를 보관해드립니다.\nMemorize your Copy History. (Just for you)",
+  "version": "1.1.0",
 
   "icons": {
     "128": "images/icon.png"
